popup photo added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body class="page">
   <header class="header">
-    
     <a href="https://vk.com/serg_vale" target="_blank"><img src="./images/vk-logo.png" alt="Логотип" class="logo"></a>
     <a href="https://www.instagram.com/serg_vale/" target="_blank"><img src="./images/inst-logo.png" alt="Логотип" class="logo logo_space"></a>
   </header>
@@ -107,6 +106,7 @@
         <p class="info__inscription">ПРОЕКТНЫЕ РАБОТЫ</p>
         <p class="info__paragraph"><a class="info__link" href="https://sergbfmv.github.io/mesto/" target="_blank">https://sergbfmv.github.io/mesto/</a></p>
         <p class="info__paragraph"><a class="info__link" href="https://sergbfmv.github.io/russian-travel/" target="_blank">https://sergbfmv.github.io/russian-travel/</a></p>
+        <p class="info__paragraph"><a class="info__link" href="https://sergbfmv.github.io/how-to-learn-main/" target="_blank">https://sergbfmv.github.io/how-to-learn-main/</a></p>
       </div>
       <div class="info__card">
         <p class="info__inscription">ОБРАЗОВАНИЕ</p>
@@ -129,5 +129,12 @@
   <footer class="footer">
     <p class="footer__copyright">© 2021. Сергей Игнатов</p>
   </footer>
+  <section class="popup popup_type_avatar">
+    <div class="popup__wrap">
+      <button class="popup__close-button popup__close-button_type_avatar" type="button"></button>
+      <img src="./images/me-color.jpg" alt="Фотография" class="popup__avatar">
+    </div>
+  </section>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
