--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <li>- ООП</li>
             <li>- верстка по макету Figma</li>
           </ul>
-          <!--<h3 class="skills__name">SKILL</h3>-->
         </div>
         <div class="skills__card">
           <h2 class="skills__text">ДАВАЙТЕ ПОГОВОРИМ</h2>
           <ul class="skills__list">
-            <li>+7 (915) 451-89-91</li>
+            <li><a class="skills__tel" href="tel:+79154518991">+7 (915) 451-89-91</a></li>
             <li>Россия, г. Москва</li>
-            <li>sergbfmv@gmail.com</li>
+            <li><a href="mailto: sergbfmv@gmail.com" class="skills__mail">sergbfmv@gmail.com</a></li>
           </ul>
-          <!--<h3 class="skills__name">CALL ME</h3>-->
+          <p class="skills__form">Или воспользуйтесь <a class="skills__link">формой</a> обратной связи</p>
+       
         </div>
       </div>
     </section>
@@ -135,6 +135,15 @@
       <img src="./images/me-color.jpg" alt="Фотография" class="popup__avatar">
     </div>
   </section>
+
+  <section class="popup popup_type_form">
+    <div class="popup__form">
+      <button class="popup__close-button popup__close-button_type_form" type="button"></button>
+      <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script>
+      <iframe src="https://forms.yandex.ru/u/60786fd623bfc2261449df19/?iframe=1" frameborder="0" name="ya-form-60786fd623bfc2261449df19" width="490"></iframe>
+    </div>
+  </section>
+
   <script src="./scripts/index.js"></script>
 </body>
 </html>
