--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>- Webpack</li>
             <li>- БЭМ</li>
             <li>- ООП</li>
-            <li>- верстка по макету Figma</li>
+            <li>- вёрстка по макету Figma</li>
           </ul>
         </div>
         <div class="skills__card">
@@ -54,9 +54,9 @@
         <p class="info__list">
           Отслужил в армии, получил 2 высших образования - экономическое и техническое(техносферная безопасность/инженер по 
           защите в ЧС). 10 лет работаю в Пожарно-спасательном центре города Москвы. Прошел путь от рядового пожарного до 
-          заместителя начальника пожарно-спасательного отряда и потом перешел работать в управление пожарно-спасательных сил.
-          Параллельно увлекся программированием и изучением языков программирования. Начал учиться на курсах в яндекс.Практикуме 
-          по професи web-разработчик
+          заместителя начальника пожарно-спасательного отряда и потом перешёл работать в управление пожарно-спасательных сил.
+          Параллельно увлёкся программированием и изучением языков программирования. Начал учиться на курсах в Яндекс.Практикуме 
+          по професии web-разработчик.
           Прошел курс по Webfloy у Максима Соколова.<br>
           <br>
           Резюме в формате PDF <a class="info__link" href="./vendor/Белый Минималистический Фото Колледж Резюме.pdf" download target="_blank">тут.</a>
@@ -82,7 +82,7 @@
         </ul>
       </div>
       <div class="info__card">
-        <p class="info__paragraph">Заместитель начальник пожарно-спасательного отряда</p>
+        <p class="info__paragraph">Заместитель начальника пожарно-спасательного отряда</p>
         <p class="info__text">ГКУ "Пожарно-спасательный центр"
           май 2018 г. - август 2020 г.
         </p>
@@ -122,7 +122,7 @@
         <p class="info__paragraph">Яндекс.Практикум</p>
         <p class="info__text">WEB - РАЗРАБОТЧИК</p>
         <p class="info__paragraph">Онлайн школа Максима Соколова</p>
-        <p class="info__text">ВЕРСТКА САЙТОВ НА WEBFLOW</p>
+        <p class="info__text">ВЁРСТКА САЙТОВ НА WEBFLOW</p>
       </div>
     </section>
   </main>
